--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -5,12 +5,9 @@
     </div>
     <div class="noTraits" *ngIf="!(bots && bots.length) && !loadingContent">
       <img class="noTraitsImg" src="assets/images/empty-illustration.png">
-       <div class='noTraitsInfo'>
-         <!--<span class='infoHeader'></span> -->
+       <div class='noTraitsInfo'>        
         <p class='infoP'>No actions available<br>
-            <!-- Create and manage bot traits -->
         </p>
-        <!-- <button class='kr-sg-button-primary'>{{'Create New'}}</button> -->
     </div>
     </div>
     <div class="table-list-content" *ngIf="bots && bots.length && !loadingContent">
@@ -21,12 +18,6 @@
             <img *ngIf="searchSources" (click)="applyFilter('')" class="search-icon" src="assets/images/close.svg">
             <img *ngIf="!searchSources" class="search-icon"src="assets/images/search_gray.svg">
           </div>
-        
-          <!-- <div class="search">
-            <img *ngIf="searchSources" (click)="applyFilter('')" class="search-icon" src="assets/images/close.svg">
-            <span *ngIf="!searchSources" class="search-name"><img class="search-img"
-                src="assets/icons/sidemenu/search-table.svg"></span>
-          </div> -->
           <div>
             <div *ngIf="currentView === 'list'" class="grid-list-view-table" (click)="currentView='grid'" ngbTooltip='Grid'><img
               src="assets/icons/grid-view.svg"></div>
@@ -34,31 +25,19 @@
               src="assets/icons/list-view.svg">
               </div>
               <div class="kr-sg-dropdowns"  ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
-                <div class="dropdown dropdown-open">
-                    <!-- <span class="filter-count"  placement="top" ngbTooltip="{{(selectedResource && selectedResource._id)?selectedResource.name:'All'}}">{{(selectedResource && selectedResource._id)?selectedResource.name:'All'}}</span> -->
+                <div class="dropdown dropdown-open">                  
                     <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img src="assets/icons/elipse.svg"></button>                                            
                     <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-                        <li ><span class="list-name">All</span></li>
-                     
+                        <li ><span class="list-name">All</span></li>                     
                     </ul>
                 </div>
             </div>
-              <!-- <span class="dropdown kr-sg-overflow-menu open">
-                <div class="dropdown-toggle" id="menu1" data-toggle="dropdown"><img class="action_icon" src="assets/icons/elipse.svg">
-                </div>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                  <li><a href="#">Option1</a></li>
-                  <li><a href="#">Option1</a></li>
-                  <li><a href="#" class="disable">Option1</a></li>
-                  <li><a href="#">Option1</a></li>
-                </ul>
-              </span> -->
           </div>
       </div>
     </div>
     </div>
     <ng-container >
-        <perfect-scrollbar class="table-scroll-perfect-bot list">
+        <perfect-scrollbar class="table-scroll-perfect-bot">
           <div class="list-view-data">
             <div class="row row_list">
               <div class="box-content" *ngFor="let source of bots"
@@ -67,7 +46,7 @@
                   <div class="boxContent">
                     <div class="action Icon"><img class="action_icon" src="assets/images/botActionTaskIcon.svg"></div>
                     <div class="detailsContainer">
-                      <span class="actions-links" (click)="deletePages('source',source,$event)" ngbTooltip='delete' >
+                      <span class="actions-links" (click)="deletePages('source',source,$event)" ngbTooltip='delete' [container]="'body'">
                         <img class="action_icon" src="assets/icons/sidemenu/delete-table.svg">
                       </span>
                       <div class="title-bot btm-title">{{source.name}}</div>
@@ -75,20 +54,13 @@
                       <div class="bottomText">                    
                         <div class="title-btm " >{{ source.noOfAppearences?source.noOfAppearences + ' Appearances':'No Appearances'}} </div>
                         <div class="title-btm right"> {{ source.noOfClicks?source.noOfClicks + ' Clicks':'No Clicks'}}</div>
-                    </div>
-  
-                    </div>
-
-                
-                    
-                    <!-- <div class="icon-gap">{{source.shortDesc}}</div> -->
-
+                    </div>  
+                    </div>                                                      
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          
+          </div>          
         </perfect-scrollbar>
       </ng-container>
  </div> 
