--- a/findly-builder/src/app/components/results-rules/results-rules.component.html
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.html
@@ -8,7 +8,7 @@
         <div class="dropdown dropdown-open">
             <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.contextType?rule.contextType:'Choose Type'}}</button>                                            
             <ul class="dropdown-menu content-menu">
-              <li (click)='updatedContextType(rule, conType)' *ngFor="let conType of listContextTypes"><a>{{conType}}</a></li>
+              <li (click)='updatedContextType(rule, conType)' *ngFor="let conType of rule.listContextTypes"><a>{{conType}}</a></li>
             </ul>
           </div>
       </div>
@@ -18,7 +18,7 @@
         <div class="dropdown dropdown-open">
             <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.contextCategory?rule.contextCategory:'Choose Category'}}</button>                                            
             <ul class="dropdown-menu content-menu">
-              <li *ngFor="let contCate of dispContextCategories" (click)='updateContextCategory(rule, contCate)'>
+              <li *ngFor="let contCate of rule.dispContextCategories" (click)='updateContextCategory(rule, contCate)'>
                 <a>{{contCate}}</a>
               </li>
             </ul>
@@ -122,7 +122,8 @@
 
 <kr-modal modalType="center" #addRulesModalPop modalClass="modal_popups_">
   <div class="modal-header">   
-    <div class="title">Add Rules</div>
+    <div class="title" *ngIf="isAdd">Add Rules</div>
+    <div class="title" *ngIf="isEdit">Edit Rules</div>
     <div class="close_icon" (click)='closeAddRulesModal()'><img src="assets/icons/modal-close.svg"></div>
   </div>
   <perfect-scrollbar class="perfect-scroll-modal-body">
@@ -145,7 +146,8 @@
     </div>
   </perfect-scrollbar> 
   <div class="modal-footer">
-      <button class="kr-sg-button-primary btn_lg" (click)="saveRules()">Add</button>
+      <button class="kr-sg-button-primary btn_lg" *ngIf="isAdd" (click)="saveRules()">Add</button>
+      <button class="kr-sg-button-primary btn_lg" *ngIf="isEdit" (click)="editRules()">Edit</button>
       <button class="kr-sg-button-secondary btn_lg" (click)='closeAddRulesModal()'>Cancel</button>
   </div>
 </kr-modal>
