--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -50,7 +50,7 @@
                         <img class="action_icon" src="assets/icons/sidemenu/delete-table.svg">
                       </span>
                       <div class="title-bot btm-title">{{source.name}}</div>
-                      <div class="title-desc">{{source.shortDesc || " Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et purus euismod, congue eros eu, congue mauris. Nunc suscipit convallis lectus, sit amet placerat urna porttitor eget. Mauris convallis tincidunt lacinia. Phasellus in ex ante.  "}}</div>
+                      <div class="title-desc">{{source.shortDesc}}</div>
                       <div class="bottomText">                    
                         <div class="title-btm " >{{ source.noOfAppearences?source.noOfAppearences + ' Appearances':'No Appearances'}} </div>
                         <div class="title-btm right"> {{ source.noOfClicks?source.noOfClicks + ' Clicks':'No Clicks'}}</div>
