message change and hide footer on search

--- a/findly-builder/src/app/components/results-rules/results-rules.component.html
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.html
@@ -109,13 +109,13 @@
         <button class="kr-sg-button-secondary btn_lg" (click)="addEditRules()">Add</button>
     </div>
     <div *ngIf="tabsList[0].isSelected && !(draftRules && draftRules.length) && !loadingRules" class="p-5 text-center">
-      No Draft rules
+      No Draft Rules
     </div>
     <div *ngIf="tabsList[1].isSelected && !(inReviewRules && inReviewRules.length) && !loadingRules" class="p-5 text-center">
-      No In-review rules
+      No In-review Rules
     </div>
     <div *ngIf="tabsList[2].isSelected && !(approvedRules && approvedRules.length) && !loadingRules" class="p-5 text-center">
-      No Approved rules
+      No Approved Rules
     </div>
    </ng-container>
  </div>
