Commented Clustering property in index pipeline page

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -45,14 +45,14 @@
                     <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
                 </label>
         </div>
-        <div class="toggleContainer">
+        <!-- <div class="toggleContainer">
             <div class="label">Clustering</div>
             <div class="info">Enabling this will Spell Correct the user input to the nearest valid term in the current language</div>
                 <label class="kr-sg-toggle with-label">
                     <input type="checkbox" checked>
                     <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
                 </label>
-        </div>
+        </div> -->
         <div class="toggleContainer">
             <div class="label">Stopwords</div>
             <div class="info">Discard stop words present in user utterance for detecting intents. </div>
