--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -110,7 +110,7 @@
                     <div class="slider"></div>
                   </label>
                 </div>
-                <div *ngIf ="crwalObject.advanceOpts.crawlEverything" class="w-100 show-allow-urls">
+                <div *ngIf ="!crwalObject.advanceOpts.crawlEverything" class="w-100 show-allow-urls">
                   <div class="allow-list-data-label label_text">Allow List <img src="assets/icons/Info-small.svg" class="ml-1"></div>
                   <div class="allow-urls-sec row">
                     <div class="col-2 p-0 title">Allow URLS</div>
