Build contains updated UI design of bot-action component for facilitating bot integration & impure pipe for filtering user associated bots.

--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -201,7 +201,7 @@
         .modal-content{
             border: 0;
             .modal-header{
-                justify-content: center !important;   
+                justify-content: center;   
                 height: 69px;
                 border-bottom: solid 0px #e5e8ec;
                 background-color: #f2f3f5;    
