--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -297,6 +297,7 @@
         }
         .modal-content{
             box-shadow: 0px 20px 40px rgba(32, 33, 36, 0.2);
+            
             .modal-header{
                 height: auto !important;
                 padding: 22px 30px;
@@ -694,4 +695,131 @@
             }            
         }
         
-    }    
+    }
+
+    ::ng-deep.linkExistingBotsModal {
+        .modal-content {
+            // top: 50% !important;
+            // left: 50% !important;
+            // transform: translate(-50%, -50%) !important;
+            // height: 80% !important;
+            height: 100% !important;
+            overflow: hidden !important;
+            // border-radius: 10px !important;
+            border-radius: 0px !important;
+        }
+        .modal-header {
+            position: relative !important;
+            display: flex !important;
+            align-items: center !important;
+            top: 0px !important;
+            height: 8% !important;
+            width: 100% !important;
+            // background: #d3d3d3 !important;
+            background: none !important;
+            // border-radius: 10px 10px 0px 0px !important;
+            justify-content: space-between !important;
+            // border-bottom: none !important;
+            border-bottom: 1px solid #e5e8ec !important;
+            font-size: large !important;
+            .header-title {
+                // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+                font-weight: normal !important;
+                color: #26344a !important;
+                margin-left: 10px !important;
+            }    
+            .button-close {
+                height: 30px !important;
+                width: 30px !important;
+                border: none !important;
+                // border: 2px solid #2c3334 !important;
+                margin-right: 10px !important;
+                // border-radius: 10px !important;
+                color: #2c3334 !important;
+                // font-weight: 1000 !important;
+                font-size: 25px !important;
+                background: inherit !important;
+            }
+        }
+        .modal-body {
+            position: relative !important;
+            width: 100% !important;
+            height: 100% !important;
+            background: #fff !important;
+            .search-input-container {
+                position: relative !important;
+                top: 10px !important;
+                right: 5px !important;
+                left: 5px !important;
+                width: calc(100% - 10px) !important;
+                height: fit-content !important;
+                input::placeholder {
+                    color: #BDC1C6 !important;
+                }
+                .search-input {
+                    height: 100% !important;
+                    width: 100% !important;
+                    border: 1px solid #E4E5E7 !important;
+                    padding: 10px 30px !important;
+                    // border-radius: 10px !important;
+                } 
+                .search-icon {
+                    position: relative !important;
+                    top: -30px !important;
+                    left: 10px !important;
+                }
+            }
+            .list-container {
+                position: relative !important;
+                .accordion:before {
+                    content: none !important;
+                }
+                .accordion-header-container {
+                    display: flex !important;
+                    align-items: center !important;
+                    border-bottom: 2px solid #eee !important;
+                    padding: 0px 5px !important;
+                    height: 41px !important;
+                    background: #fff !important;
+                    &:hover {
+                        background: #e5e8ec !important;
+                    }
+                    .chevron-icon {
+                        height: 14px !important;
+                        width: 14px !important;
+                        // transform: rotate(0deg);
+                        transition: 0.33s;
+                    }
+                    .accordion-header-title {
+                        // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+                        font-size: inherit !important;
+                        margin-left: 40px !important;
+                    }
+                    .accordion-control-button {
+                        background: inherit !important;
+                        border: none !important;
+                    }
+                }
+                .acc-active {
+                    border-bottom: none !important;
+                     .chevron-icon {
+                    //     transform: rotate(90deg);
+                         transition: 0.33s;
+                     }
+                }
+                .card-body {
+                    position: relative !important;
+                    left: 7px !important;
+                    border: none !important;
+                    border-left: 1px solid #e5e8ec !important; 
+                }
+                .accordion-content-container {
+                    position: relative !important;
+                    padding: 5px 15px 0 35px !important;
+                }
+            }
+        
+        }
+        
+    }
+       
