pagination first/last

--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -772,6 +772,6 @@
         font-size: 12px;
     }
     .dis-arow {
-        border: solid #202124;
-        border-width: 0 2px 2px 0 ;
+        border: solid #c5c7ce;
+        border-width: 0 2px 2px 0;
     }
