--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -371,6 +371,7 @@
                             }
                             .kr-sg-input-search{
                                 width: 300px;
+                                margin-right: 30px;
                                 input{
                                     padding: 4px 10px 4px 32px;
                                     background: #FFFFFF;
@@ -556,7 +557,8 @@
         font-size: 10px !important;
         line-height: 14px;
     }
-    .accordion-content-info{     
+    .accordion-content-info{ 
+        margin-right: 30px;    
         .table-list-content{
             .kr-sg-data-table{
                 .table-content {
@@ -774,4 +776,7 @@
     .dis-arow {
         border: solid #c5c7ce;
         border-width: 0 2px 2px 0;
+    }
+    .scroll-table{
+        height: calc(100vh - 250px);
     }
